--- a/_ansible/roles/ioc/tasks/main.yml
+++ b/_ansible/roles/ioc/tasks/main.yml
@@ -50,8 +50,8 @@
 # This tidies that up (TODO can be removed when install.sh is deprecated).
 - name: Fixup RELEASE.shell
   ansible.builtin.replace:
-    replace: export \1=\2
-    regexp: 'export *([^=]*)=" +(.*)'
+    replace: export \1\2
+    regexp: 'export *([^=]*=") +(.*)'
     dest: "{{ configure_folder }}/RELEASE.shell"
 
 # Compile the IOC binary #######################################################
